-added new ifram textify

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </div>
   <div class="sticky"><button><a href="#nav">back to top</a></button></div>
   <hr>
-  <div class="card mb-3 m-3  ">
+  <!-- <div class="card mb-3 m-3  ">
     <img src="./assets/Screenshot 2023-01-17 154506.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="card-title">Textify- React app</h4>
@@ -150,6 +150,12 @@
         href="https://www.linkedin.com/posts/-yash-parmar_reactjs-react-javascript-activity-6999704862615613441-2XrR?utm_source=share&utm_medium=member_desktop">Video</a>
       <hr>
     </div>
+  </div> -->
+  <div class="frame">
+
+    <iframe width="70%" height="800px" src="https://main--astounding-frangollo-0ca054.netlify.app/"
+      title="W3Schools Free Online Web Tutorials">
+    </iframe>
   </div>
   <hr>
   <div class="card mb-3 m-3  ">
